--- a/style4.css
+++ b/style4.css
@@ -8,8 +8,9 @@
 
 body{
   min-height: 100vh;
-  background-image: linear-gradient(120deg,#3498db,#8e44ad); 
+background-image: linear-gradient(120deg,#6495ED,#87CEEB);
   /* degrade */
+  overflow: hidden;
 }
 
 .login-form{
@@ -19,8 +20,8 @@ body{
   padding: 80px 40px;
   border-radius: 10px;
   position: absolute;
-  left: 50%;  
-  top: 50%;
+  left: 18%;
+  top: 300px;
   transform: translate(-50%,-50%);
 }
 
@@ -62,7 +63,7 @@ body{
   position: absolute;
   width: 0%;
   height: 2px;
-  background: linear-gradient(120deg,#3498db,#8e44ad);
+  background-image: linear-gradient(120deg,#6495ED,#87CEEB);
   transition: .5s;
 }
 
@@ -78,12 +79,13 @@ body{
   width: 100%;
   height: 50px;
   border: none;
-  background: linear-gradient(120deg,#3498db,#8e44ad,#3498db);
+  background-image: linear-gradient(120deg,#6495ED,#87CEEB);
   background-size: 200%;
   color: #fff;
   outline: none;
   cursor: pointer;
   transition: .5s;
+  font-weight: bold;
 }
 
 .logbtn:hover{
