--- a/style4.css
+++ b/style4.css
@@ -27,7 +27,7 @@ background-image: linear-gradient(120deg,#6495ED,#87CEEB);
 
 .login-form h1{
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 45px;
 }
 
 .txtb{
@@ -75,7 +75,7 @@ background-image: linear-gradient(120deg,#6495ED,#87CEEB);
 }
 
 .logbtn{
-  display: block;
+  display: grid;
   width: 100%;
   height: 50px;
   border: none;
@@ -93,7 +93,18 @@ background-image: linear-gradient(120deg,#6495ED,#87CEEB);
 }
 
 .bottom-text{
-  margin-top: 60px;
+  margin-top: 50px;
   text-align: center;
   font-size: 13px;
+}
+
+.imagem{
+  height: 100px; 
+  width: 135px; 
+  top: 50%;
+}
+
+img{
+  height: 100px; 
+  width: 135px; 
 }
