--- a/style6.css
+++ b/style6.css
@@ -11,6 +11,11 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  /* background-image: linear-gradient(120deg,#6495ED,#87CEEB); */
+}
+
+button{
+    background: #00004d;
 }
 
 .form-signin {
