--- a/assets1/style7.css
+++ b/assets1/style7.css
@@ -6,16 +6,13 @@ body {
 body {
   display: -ms-flexbox;
   display: flex;
+  font-size: 18px; 
   -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
-  /* background-image: linear-gradient(120deg,#6495ED,#87CEEB); */
-}
-
-button{
-    background: #00004d;
+  background-image: linear-gradient(190deg,#6494edf1,#87cfeb32);
 }
 
 .form-signin {
